--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
 <head></head>
-  <style></style>
-<body> Hello World! </body>
+<style>
+  div {
+  color: red;
+  }
+  </style>
+<body> 
+  <div>
+  Hello World! 
+  </div>
+  </body>
 </html>
