--- a/week01-02.html
+++ b/week01-02.html
@@ -1,7 +1,13 @@
 <html>
 <head></head>
-<style></style>
+<style>
+  div {
+    background-color: red; 
+  }
+</style>
 <body>
+   
 <div> first frame </div>
+  
 </body>
 </html>
