--- a/week01-02.html
+++ b/week01-02.html
@@ -2,13 +2,14 @@
 <head></head>
 <style>
   div {
-    margin: 10px;
+    margin: 20px;
+    padding: 20px;
     background-color: red; 
   }
 </style>
 <body>
    
-<div> first frame </div>
+<div> the first frame </div>
   
 </body>
 </html>
