--- a/week01-02.html
+++ b/week01-02.html
@@ -2,9 +2,13 @@
 <head></head>
 <style>
   div {
-    margin: 20px;
-    padding: 20px;
+    margin: 0px;
+    padding: 5px; 
+    
     background-color: red; 
+    
+    width: 600px;
+    height: 200x;
   }
 </style>
 <body>
