--- a/week01-02.html
+++ b/week01-02.html
@@ -7,6 +7,7 @@
   }
   
   div {
+    position: absolute;
     margin: 0px;
     padding: 5px; 
     
@@ -17,7 +18,7 @@
     width: 600px;
     height: 200px;
     
-    background-color: red; 
+    background-color: red ; 
   }
 </style>
 <body>
